fix scrollbar on affiliates page

--- a/less/affiliates.less
+++ b/less/affiliates.less
@@ -31,7 +31,7 @@
 }
 
 .affiliates {
-	text-align: justify;
+//	text-align: justify;
 //	font-size: 0.1px;
 
 	form {
