--- a/style.css
+++ b/style.css
@@ -1815,9 +1815,6 @@ td {
 .affwp-notice {
   margin-bottom: 0;
 }
-.affiliates {
-  text-align: justify;
-}
 .affiliates form {
   font-size: 1rem;
 }
